# learning-python

./: .gitignore
ai-video-language-convertion/: .gitignore  README.md  av_preprocessing.py  common.py  main.py  mcp_server.py  ollama.py  pyproject.toml  srt_processing.py  transcribe.py  translate.py  tts.py
ai-video-language-convertion/preprocessors/: base.py  denoise_nr.py  denoise_sox.py  extract_vocals_demucs.py  normalize.py  restore_voicefixer.py  speechbrain.py  vad_silero.py
ai-video-language-convertion/prompts/: searching-for-the best.md  searching-for-the-halucionacion-factor-ffmpeg.md  searching-for-the-halucionacion-factor-whisper.md
config-handling/: config.py  config.yaml  main.py  requirements.txt
config-handling/conf.d/: config.yaml  config1.yaml
config-handling/scratchpad/: config-v1.py  config-v2.py  config-v3.py
data-structures/: 01-data-classes.py  01-pydantic.py  02-data-classes-classic-implementation-comparison.py
data_science_from_scratch/: c04_matrices_basics.py  c04_matrix_as_relationships_representation.py  c04_vectors_2d_plotting.py  c04_vectors_basics.py  c04_vectors_projecting.py
lark/: 01-lark-parser.py
python-errors/: mutable-default.py
video-editing/: Examples.md  README.md  demo.py  video_project_generator.py
video-editing/generators/: __init__.py  common.py  decorator.py  generator.py  generators_kdenlive.py  generators_openshot.py  generators_shotcut.py  generators_shotcut_basic.py
