[project]
name = "ai-video-language-convertion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "demucs>=4.0.1",
    "fastmcp>=2.10.1",
    "librosa>=0.11.0",
    "nemo-toolkit[asr]>=2.2.1",
    "noisereduce>=3.0.3",
    "numpy>=2.0.2",
    "nvidia-cudnn-cu11>=9.10.2.21",
    "nvidia-cudnn-cu12>=9.5.1.17",
    "onnxruntime-gpu>=1.22.0",
    "openai-whisper>=20250625",
    "pysrt>=1.1.2",
    "requests>=2.32.4",
    "resampy>=0.4.3",
    "scipy>=1.15.3",
    "silero>=0.4.1",
    "silero-vad>=5.1.2",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "torchaudio>=2.7.1",
    "voicefixer>=0.1.3",
    "whisperx>=3.4.2",
]
